--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,8 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+html, body {
+    padding: 0;
     margin: 0;
+    height: 100%;
+}
+
+#root {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+}
+
+.main-content {
+    flex: 1;
+}
+
+footer {
+    margin-top: 0 !important;
+    padding: 10px 0 !important;
+}
+
+body {
     font-family:
         -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
         "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -112,4 +132,34 @@ code {
         border-top-color: inherit;
         border-bottom-color: inherit;
     }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-6px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes fadeInSlow {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.animate-fadeIn {
+    animation: fadeIn 0.4s ease-out;
+}
+
+.animate-fadeInSlow {
+    animation: fadeInSlow 0.6s ease-out;
 }
